# J.A.R.V.I.S

./: .gitignore  .pdm-python  ideias.md  main.py  pyproject.toml  readme.md  requirements.txt
jarvis/application/services/: conversation_service.py  task_service.py
jarvis/core/: scheduler.py
jarvis/data/db/: memory.db
jarvis/domain/: personality.py  user_profile.py
jarvis/domain/tasks/: task.py
jarvis/infrastructure/automation/: __init__.py  project_scanner.py  screen_reader.py  system_controller.py  system_health.py  workspace_manager.py
jarvis/infrastructure/engine/: llm_client.py
jarvis/infrastructure/listener/: listener.py
jarvis/infrastructure/memory/: vector_store.py
jarvis/infrastructure/persistence/repositories/: __init__.py  conversation_repository.py  task_repository.py  workspace_repository.py
jarvis/infrastructure/voice/: voice_engine.py
jarvis/interfaces/cli/: main.py  router.py
jarvis/interfaces/cli/commands/: base_command.py  command_router.py  listen.py
jarvis/interfaces/cli/commands/automation/: __init__.py  open_app_command.py  start_workspace_command.py  system_health_command.py
jarvis/interfaces/cli/commands/conversation/: cognitive_chat_command.py  greeting_command.py  time_command.py
jarvis/interfaces/cli/commands/task/: __init__.py  add_task_command.py  change_task_title_command.py  list_tasks_command.py  mark_task_complete_command.py  remove_task_command.py
jarvis/interfaces/cli/handlers/: basic_handler.py
scripts/: start_dev.py
